Adding in SQL queries for updating an identity
