# pkg/server/model_address.go
@@ -12,6 +12,12 @@ package identityserver
 // Address - Address of the Identity
 type Address struct {
 
+	// UUID v4
+	IdentityID string `json:"identityID,omitempty"`
+
+	// UUID v4
+	AddressID string `json:"addressID,omitempty"`
+
 	Type string `json:"type,omitempty"`
 
 	Address1 string `json:"address1,omitempty"`
@@ -27,6 +33,4 @@ type Address struct {
 	Country string `json:"country,omitempty"`
 
 	Validated bool `json:"validated,omitempty"`
-
-	Active bool `json:"active,omitempty"`
 }
