# pkg/server/model_identity.go
@@ -19,6 +19,9 @@ type Identity struct {
 	// UUID v4
 	IdentityID string `json:"identityID,omitempty"`
 
+	// UUID v4
+	TenantID string `json:"tenantID,omitempty"`
+
 	FirstName string `json:"firstName"`
 
 	MiddleName string `json:"middleName,omitempty"`
@@ -51,4 +54,6 @@ type Identity struct {
 
 	// UUID v4
 	DisabledBy *string `json:"disabledBy,omitempty"`
+
+	LastUpdatedOn time.Time `json:"lastUpdatedOn,omitempty"`
 }
