# pkg/server/model_phone.go
@@ -12,9 +12,15 @@ package identityserver
 // Phone - Phone number
 type Phone struct {
 
+	// UUID v4
+	IdentityID string `json:"identityID,omitempty"`
+
+	// UUID v4
+	PhoneID string `json:"phoneID,omitempty"`
+
 	Number string `json:"number,omitempty"`
 
-	Valid bool `json:"valid,omitempty"`
+	Validated bool `json:"validated,omitempty"`
 
 	Type string `json:"type,omitempty"`
 }
